# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import wallpapersRouter from "./wallpapers";
+import checkoutRouter from "./checkout";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(wallpapersRouter);
+router.use(checkoutRouter);
 
 export default router;
